objects/bofc__BOFCCompareExport__c.object
<CustomObject>
    <fields>
        <fullName>bofc__Field_Label__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Field_Type__c</fullName>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Org_Name__c</fullName>
        <label>Org Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BOFCCompareExport</label>
    <nameField>
        <label>BOFCCompareExport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCCompareExport</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>